--- a/child1/g-c1/super-gc1/pom.xml
+++ b/child1/g-c1/super-gc1/pom.xml
@@ -1,6 +1,6 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mycompany.app</groupId>
-  <artifactId>parent</artifactId>
+  <artifactId>super gc</artifactId>
   <version>1.1</version>
 </project>
